# alx-backend-python

./: .gitignore  README.md  pyproject.toml  requirments.txt
0x00-python_variable_annotations/: 0-add.py  1-concat.py  100-safe_first_element.py  101-safely_get_value.py  102-type_checking.py  2-floor.py  3-to_str.py  4-define_variables.py  5-sum_list.py  6-sum_mixed_list.py  7-to_kv.py  8-make_multiplier.py  9-element_length.py  README.md
0x01-python_async_function/: 0-basic_async_syntax.py  1-concurrent_coroutines.py  2-measure_runtime.py  3-tasks.py  4-tasks.py  README.md
0x02-python_async_comprehension/: .gitignore  0-async_generator.py  1-async_comprehension.py  2-measure_runtime.py  README.md
0x03-Unittests_and_integration_tests/: README.md  test_client.py  test_utils.py  utils.py
Django-Middleware-0x03/: README.md
Django-signals_orm-0x04/: post_man-Collections
messaging_app/: Dockerfile  README.md  docker-compose.yml  kubctl-0x01  kubeservice.yaml  post_man-Collections  pyproject.toml  requirements.txt  requirments.txt
messaging_app/chats/: models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
messaging_app/chats/migrations/: 0001_initial.py
messaging_app/messaging_app/: blue_deployment.yaml  deployment.yaml  kubctl-0x01  settings.py  urls.py
messaging_app/messaging_app/messaging_app/: settings.py
python-context-async-perations-0x02/: 0-databaseconnection.py  1-execute.py  3-concurrent.py  README.md
python-decorators-0x01/: 0-log_queries.py  1-with_db_connection.py  2-transactional.py  3-retry_on_failure.py  README.md  (+2 more)
(+27 files in other folders)
